  - Added option "-r INT" to randomize the goals with a given 64-bit seed before
    selection.
  - Added option "-y" for a dry run.
  - Renamed run_action to run in Mirabelle.action record. Minor INCOMPATIBILITY.
  - Run the actions on goals before commands "unfolding" and "using".

* Meson
  - Added support for polymorphic "using" facts. Minor INCOMPATIBILITY.

* (Co)datatype package:
  - Lemma map_ident_strong is now generated for all BNFs.

* More ambitious minimization of case expressions in generated code.

* Code generation for Scala: type annotations in pattern bindings
  are printed in a way suitable for Scala 3.


*** ML ***

* Type Bytes.T supports scalable byte strings, beyond the limit of
String.maxSize (approx. 64 MB on 64_32 architecture).

* Operations for XZ compression (via Isabelle/Scala):

  XZ.compress: Bytes.T -> Bytes.T
  XZ.uncompress: Bytes.T -> Bytes.T


*** System ***

* Command-line tool "isabelle scala_project" supports Gradle as
alternative to Maven: either option -G or -M needs to be specified
explicitly. This increases the chances that the Java/Scala IDE project
works properly.

* Command-line tool "isabelle hg_sync" synchronizes the working
directory of a local Mercurial repository with a target directory, using
rsync notation for destinations.

* Command-line tool "isabelle sync" synchronizes Isabelle + AFP
repositories with a target directory, based on "isabelle hg_sync". Local
jars and sessions images may be uploaded as well, to avoid redundant
builds on the remote side. This tool requires a Mercurial clone of the
Isabelle repository: a regular download of the distribution will not
work!



New in Isabelle2021-1 (December 2021)
-------------------------------------

*** General ***

* The Isabelle/Haskell library ($ISABELLE_HOME/src/Tools/Haskell) has
been significantly improved. In particular, module Isabelle.Bytes
provides type Bytes for light-weight byte strings (with optional UTF8