@@ -156,6 +156,8 @@ longer. INCOMPATIBILITY.
   - Added support for polymorphic "using" facts. Minor INCOMPATIBILITY.
 
 * (Co)datatype package:
+  - BNFs now require a strict cardinality bound (<o instead of \<le>o).
+    Minor INCOMPATIBILITY for existing manual BNF declarations.
   - Lemma map_ident_strong is now generated for all BNFs.
 
 * More ambitious minimization of case expressions in generated code.
